--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,62 +7,69 @@
     android:background="@drawable/albert_memorial_result"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        style="@style/styletextview"
+        android:layout_width="157dp"
+        android:layout_height="36dp"
+        android:layout_marginBottom="164dp"
+        android:text="Elija una accion"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="161dp"
         android:layout_height="114dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:src="@tools:sample/avatars"
-        app:layout_constraintBottom_toTopOf="@+id/editTextName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.232"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/mariposa" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="288dp"
-        android:layout_height="65dp"
-        android:text="Elija una accion"
-        android:textColor="@color/black"
-        android:textColorHighlight="#9C27B0"
-        android:textColorHint="#E91E63"
-        android:textSize="20sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:srcCompat="@drawable/mariposa" />
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="272dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="136dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="ingrese a calendario"
         android:inputType="text"
-        android:text="Apps calendario"
+        android:text="CALENDARIO"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.417"
+        app:layout_constraintHorizontal_bias="0.265"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="299dp"
-        android:layout_height="290dp"
+        android:layout_width="294dp"
+        android:layout_height="225dp"
         android:selectedWeekBackgroundColor="#673AB7"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
-        app:layout_constraintVertical_bias="0.247" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        android:contentDescription="button floating "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_dialog" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
