--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
 
     <style name="styletextview">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textColorHighlight">#9C27B0</item>
-        <item name="android:textColorHint">#E91E63</item>
+        <item name="android:textColorHighlight">#150019</item>
+        <item name="android:textColorHint">#9F1746</item>
         <item name="android:textSize">20sp</item>
         <item name="android:visibility">visible</item>
     </style>
