--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,62 +12,66 @@
         style="@style/styletextview"
         android:layout_width="177dp"
         android:layout_height="74dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="640dp"
         android:text="Bienvenidos"
+        android:textColor="#050329"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.179"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="161dp"
         android:layout_height="114dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="108dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.192"
+        app:layout_constraintHorizontal_bias="0.168"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/baseline_edit_calendar_24" />
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="136dp"
-        android:layout_height="55dp"
+        android:layout_width="177dp"
+        android:layout_height="58dp"
         android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="ingrese a calendario"
         android:inputType="text"
         android:text="CALENDARIO"
+        android:textColor="#01051C"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.179"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="294dp"
-        android:layout_height="225dp"
+        android:layout_width="346dp"
+        android:layout_height="337dp"
         android:selectedWeekBackgroundColor="#673AB7"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="54dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="644dp"
         android:clickable="true"
         android:contentDescription="button floating "
+        android:tint="#2196F3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="@color/black"
         app:srcCompat="@android:drawable/btn_dialog" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
