se han realizado cambios en el boton flotante y el calendar view ademas y el vector se le dio fondo al calendar view y al selector de dias

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,21 @@
     <TextView
         android:id="@+id/textView"
         style="@style/styletextview"
-        android:layout_width="177dp"
-        android:layout_height="74dp"
-        android:layout_marginBottom="640dp"
-        android:text="Bienvenidos"
+        android:layout_width="187dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="44dp"
+        android:text="devGecz"
         android:textColor="#050329"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="161dp"
         android:layout_height="114dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.168"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/editTextName"
         android:layout_width="177dp"
         android:layout_height="58dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="ingrese a calendario"
         android:inputType="text"
@@ -51,19 +51,23 @@
         android:id="@+id/calendarView"
         android:layout_width="346dp"
         android:layout_height="337dp"
-        android:selectedWeekBackgroundColor="#673AB7"
+        android:background="#AA21C1"
+        android:backgroundTint="#2196F3"
+        android:foregroundTint="#3F51B5"
+        android:selectedWeekBackgroundColor="#9C27B0"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.646"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.067" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="54dp"
         android:layout_height="49dp"
-        android:layout_marginTop="644dp"
+        android:layout_marginTop="664dp"
         android:clickable="true"
         android:contentDescription="button floating "
         android:tint="#2196F3"
